Tentando melhorar a visualização para celulares
Padding 33%

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <div class="imgprincipal">
             <img src="images/Ramon Aulas.jpg" alt="Serviços e contato professor Ramon" />
         </div>
+
         <div class="bibliografia">
             <h1>UM POUCO DA MINHA HISTÓRIA</h1>
-            <p>Olá sou o professor Ramon Moreira Lopes, sou formado em
-                licenciatura em matemática pelo Instituto Federal Campus Itapetininga, atuo
-                na área da educação desde 2021, já atuei na rede estadual e municipal...</p>
+            <p>Olá sou o professor Ramon Moreira Lopes, sou formado em licenciatura em matemática pelo Instituto Federal Campus Itapetininga, atuo na área da educação desde 2021, já atuei na rede estadual e municipal...</p> 
         </div>
 
         <div class="formacao">
