--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="pt-br">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--código para ser responsivo em computador e celulares-->
     <link rel="stylesheet" href="styles.css" />
     <title>Professor Ramon</title> <!--esse é o nome da aba-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
