link para o jogo

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <p>abaixo o link do certificado</p>
         </div>
     </section>
+
     <section class=" meio">
-        <h2>FILMES E SÉRIES</h2>
+        <h2>jogo TCC</h2>
+       <a href= "https://gamejolt.net/?token=6ZxHgzsnJLpXsCCrkbJtQas9WBx3RJ"> Jogo Matemática e Ação</a> 
 
     </section>
 
